# claybrick

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md
claybrick/: Cargo.toml
claybrick/examples/: catalog.rs  read_file.rs  read_xref.rs  rw.rs  trace.rs  xref.rs
claybrick/src/: error.rs  lib.rs  parse.rs  pdf.rs  simple_encode.rs  writer.rs
claybrick/src/parse/: error.rs  object.rs  object_stream.rs  trailer.rs  xref.rs
claybrick/src/pdf/: array.rs  document.rs  indirect.rs  name.rs  object.rs  stream.rs  trailer.rs  xref.rs
claybrick/src/pdf/document/: catalog.rs  pages.rs
claybrick/src/pdf/object/: array.rs  indirect.rs  name.rs  stream.rs  string.rs
claybrick/src/simple_encode/: array.rs  dictionary.rs  indirect.rs  name.rs  object.rs  section.rs  stream.rs  string.rs
claybrick/src/simple_encode/object/: array.rs  dictionary.rs  indirect.rs  name.rs  stream.rs  string.rs
claybrick/src/writer/: string.rs
codec/ascii85/: Cargo.toml
codec/ascii85/benches/: benchmarks.rs
codec/ascii85/src/: decode.rs  encode.rs  lib.rs
