[package]
edition = "2021"
name = "claybrick"
version = "0.1.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.22"
fnv = "1.0"
hex = "0.4"
log = "0.4"
nom = "7.1.0"
nom-tracable = "0.8"
nom_locate = "4.0"

[dev-dependencies]
env_logger = "0.9.0"
structopt = "0.3"

[features]
default = []
trace = ["nom-tracable/trace"]

[[example]]
name = "trace"

[[example]]
name = "read_xref"

[[example]]
name = "catalog"
